src/objects/SFDC_Acct_Plan__c.object
<CustomObject>
    <description>Overall goals, objectives, and challenges for penetrating an account.</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account__r.Id</formula>
        <inlineHelpText>Account ID from Account for syncing report data</inlineHelpText>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <inlineHelpText>Inherited from the Account Plan associated wtih the Quarterly Review</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Growth__c</fullName>
        <formula>IF (  Last_FY_Account_Sales__c = 0 , 1,   (  Plan_FY_Account_Sales_Goal__c  - Last_FY_Account_Sales__c  ) /  Last_FY_Account_Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Americas_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Americas Account Manager</label>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Account Plan</relationshipLabel>
        <relationshipName>Account_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Banner__c</fullName>
        <description>Banner showing that the record type is either Quarterly Review or Account Plan</description>
        <formula>IMAGE(&quot;https://aecom.my.salesforce.com/resource/1398173477000/AcctPlanBanner2&quot;, &quot;Account Plan Banner&quot;, 30, 550)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line_s__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Business Line(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining and Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_AECOM_Work__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Current AECOM Work</label>
        <picklist>
            <picklistValues>
                <fullName>Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Repositioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cogeneration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial &amp; Mixed Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Interiors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highway &amp; Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydropower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Assmt &amp; Permitting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial &amp; Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Support Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining &amp; Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office ‐ Core &amp; Shell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port &amp; Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail &amp; Transit Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remediation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty &amp; Emerging Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology &amp; Data Centers</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_FY_Est_Client_Accessible_Spend__c</fullName>
        <inlineHelpText>Client’s current FY budget available for AECOM range of services</inlineHelpText>
        <label>Current FY Est. Client Accessible Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Regions__c</fullName>
        <label>Current Regions</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>End_Client_Sector__c</fullName>
        <formula>IF (ISPICKVAL (Account__r.Client_Group__c, &quot;National Government&quot;) &amp;&amp; (BEGINS( Account__r.Name, &quot;US &quot;) || BEGINS(Account__r.Name, &quot;USAID&quot;) ) , &quot;US Federal Government&quot;,
 IF (ISPICKVAL (Account__r.Client_Group__c, &quot;National Government&quot; ), &quot;Other National Government&quot;, 
CASE( Account__r.Client_Subgroup__c , &quot;Airports/Aviation&quot;, &quot;Aviation&quot;, 
&quot;Chemical/Pharmaceutical&quot;, &quot;ChemPharma&quot;, 
&quot;Oil/Gas Refining/Exploration and Prod/Dist&quot;, &quot;Oil &amp; Gas&quot;, 
&quot;Oil and Gas Transmission and Distribution&quot;, &quot;Oil &amp; Gas&quot;, 
&quot;Ports/Marine/Marinas&quot;, &quot;Port &amp; Marine&quot;, 
&quot;Rail - Heavy Freight Rail Transportation&quot;, &quot;Freight Rail&quot;, 
&quot;Freight Transportation (except rail) and Warehousing&quot;, &quot;Freight Rail&quot;, 
&quot;Rail - Private Local and Suburban Transit Passenger&quot;, &quot;Transit&quot;, 
&quot;Healthcare Services (Private)&quot;, &quot;Healthcare&quot;, 
&quot;Healthcare Agency / Services&quot;, &quot;Healthcare&quot;, 
&quot;Power - Alternative/Renewable&quot;, &quot;Power&quot;, 
&quot;Power - Fossil/Thermal Generation&quot;, &quot;Power&quot;, 
&quot;Power - Geothermal/Nuclear Generation&quot;, &quot;Power&quot;, 
&quot;Power - Hydro and Dam&quot;, &quot;Power&quot;, 
&quot;Power - Private Utility Gas/Electric Transmission/Distribution&quot;, &quot;Power&quot;, 
&quot;Education Agency / Services&quot;, &quot;Education&quot;, 
&quot;Education Services (Private)&quot;, &quot;Education&quot;, 
&quot;Sports/Amusement/Recreation&quot;, &quot;Sports&quot;, 
&quot;Leisure/Hospitality&quot;, &quot;Leisure&quot;, 
&quot;Arts/Museum/Galleries/Cultural&quot;, &quot;Leisure&quot;, 
&quot;Media/Entertainment&quot;, &quot;Leisure&quot;, 
&quot;Metals&quot;, &quot;Mining &amp; Metals&quot;, 
&quot;Mining Metal/Coal/Other&quot;, &quot;Mining &amp; Metals&quot;, 
&quot;Private/Commercial Developers&quot;, &quot;Commercial&quot;, 
&quot;Other Manufacturing&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Architect/Engineers/Consultants&quot;, &quot;Other Private&quot;, 
&quot;Legal/Banking/Finance/Insurance&quot;, &quot;Commercial&quot;, 
&quot;Retail and Retail Property&quot;, &quot;Commercial&quot;, 
&quot;Water Utility - Private&quot;, &quot;Water Systems&quot;, 
&quot;Automotive&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Construction Company - Buildings&quot;, &quot;Other Private&quot;, 
&quot;Construction Company - Infrastructure&quot;, &quot;Other Private&quot;, 
&quot;Food/Beverages/Agriculture&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Forestry/Pulp/Paper&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Aerospace/Defense&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Data/Technology/Communications&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Non-Government Transportation&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Other Industrial/Commercial&quot;, &quot;Other Private&quot;, 
&quot;Other Manufacturing&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Private Justice/Prisons/National Security Agencies / Services&quot;, &quot;Other Private&quot;,
 &quot;Waste&quot;, &quot;Industrial &amp; Manufacturing&quot;, 


CASE ( Account__r.Client_Group__c, &quot;Municipal&quot;, &quot;Other Public&quot;, &quot;State/Province Agencies&quot;, &quot;Other Public&quot;, &quot;Private&quot;, &quot;Other Private&quot;,
 
null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Inherited from Account record</inlineHelpText>
        <label>End-Client Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Account Plan (Executive Sponsor)</relationshipLabel>
        <relationshipName>ExecutiveSponsorLookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Account Manager</label>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Account Plan (Global Account Manager)</relationshipLabel>
        <relationshipName>Account_Plan1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Business_Problems__c</fullName>
        <label>Key Business Problems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Client_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Client Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N60000001PRPAEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_FY_Account_Sales__c</fullName>
        <formula>Last_FY_Product_Sales__c  +  Last_FY_Services_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last FY Account Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Product_Sales__c</fullName>
        <label>Last FY Product Sales</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Services_Sales__c</fullName>
        <label>Last FY Services Sales</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Plan_Revision__c</fullName>
        <label>Last Plan Revision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Account_Sales_Goal__c</fullName>
        <formula>Plan_FY_Product_Sales_Goal__c  +  Plan_FY_Services_Sales_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan FY Account Sales Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Product_Sales_Goal__c</fullName>
        <label>Plan FY Product Sales Goal</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Services_Sales_Goal__c</fullName>
        <label>Plan FY Services Sales Goal</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planning_Year__c</fullName>
        <label>Planning Year</label>
        <picklist>
            <picklistValues>
                <fullName>FY2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2014</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FY2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2016</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_AECOM_Work__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Potential AECOM Work</label>
        <picklist>
            <picklistValues>
                <fullName>Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Repositioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cogeneration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial &amp; Mixed Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Interiors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highway &amp; Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydropower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Assmt &amp; Permitting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial &amp; Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Support Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining &amp; Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office ‐ Core &amp; Shell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port &amp; Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail &amp; Transit Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remediation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty &amp; Emerging Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology &amp; Data Centers</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Potential_Barriers__c</fullName>
        <label>Potential Barriers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prior_FY_Booking_actual__c</fullName>
        <inlineHelpText>Enter prior year total gross booking values</inlineHelpText>
        <label>Prior FY Booking (actual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_FY_Sales_NSR__c</fullName>
        <inlineHelpText>Enter prior year new work sold</inlineHelpText>
        <label>Prior FY Sales (NSR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Sales_Growth__c</fullName>
        <formula>IF ( Last_FY_Product_Sales__c = 0, 1 ,  (  Plan_FY_Product_Sales_Goal__c -  Last_FY_Product_Sales__c ) /  Last_FY_Product_Sales__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Regional_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Account Manager</label>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Account Plan (Regional Account Manager)</relationshipLabel>
        <relationshipName>Account_Plan2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Click to return to Account Plan</inlineHelpText>
        <label>Related Account Plan</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>SFDC_Acct_Plan__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipName>Quarterly_Review</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Sales_Growth__c</fullName>
        <formula>IF (  Last_FY_Services_Sales__c = 0 , 1, (  Plan_FY_Services_Sales_Goal__c  -  Last_FY_Services_Sales__c  )  /  Last_FY_Services_Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Strengths_to_Leverage__c</fullName>
        <label>Strengths to Leverage</label>
        <type>TextArea</type>
    </fields>
    <label>Account Plan</label>
    <listViews>
        <fullName>Plans_Approved</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Planning_Year__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Executive_Sponsor__c</columns>
        <columns>Global_Account_Manager__c</columns>
        <columns>Americas_Account_Manager__c</columns>
        <columns>Regional_Account_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SFDC_Acct_Plan__c.Acct_Plan</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Account Plans - Approved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Plans_only</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Executive_Sponsor__c</columns>
        <columns>Americas_Account_Manager__c</columns>
        <columns>Regional_Account_Manager__c</columns>
        <columns>Global_Account_Manager__c</columns>
        <columns>Planning_Year__c</columns>
        <columns>Current_AECOM_Work__c</columns>
        <columns>Potential_AECOM_Work__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SFDC_Acct_Plan__c.Acct_Plan</value>
        </filters>
        <label>Account Plans - All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Account Plan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan</pluralLabel>
    <recordTypes>
        <fullName>Acct_Plan</fullName>
        <active>true</active>
        <description>Account Plan</description>
        <label>Acct Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Qtr_Review</fullName>
        <active>false</active>
        <description>Quarterly Review</description>
        <label>Qtr Review</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>